Back-end/src/main/java/com/example/error/OverflowingTaskException.java
package com.example.error;

public class OverflowingTaskException extends RuntimeException {

    public OverflowingTaskException(String message) {
        super(message);
    }

}
